--- a/app/Views/fullpostexplore.html
+++ b/app/Views/fullpostexplore.html
@@ -1,3 +1,4 @@
+
 <body>
 
 	<table align="center" border="1" width="1000" height="550"  cellpadding="10" cellspacing="0" >
@@ -7,7 +8,7 @@
 			<td height="30" align="center"><h2>EXPLORE</h2></td>
 			<td>
 			<div>
-			<image src = "img/crisishelp1.jpg" width = "200px" height = "200px" align = "right"/>
+			<image src = "img/<?php echo $image; ?>" width = "200px" height = "200px" align = "right"/>
 			</div>
 			</td>
 		</tr>
@@ -23,30 +24,16 @@
 		
 		<tr>
 			<td valign="top" colspan = "2">
-				<h2>Donate for cancer patient</h2>
-				<p>By: Amy Watson </p>
-				<div><B>$1116</B> of $8000 goal</div>
+				<h2><?php echo $title; ?></h2>
+				<p>By:<?php echo "Razib" ?></p>
+				<div><B>$<?php echo 0;?></B> of $<?php echo $goal;?> goal</div>
 				<div>Raised by 125 people in 10 days</div>
 				<image src = "img/progressbar.png"/>
 				<br>
 				<input type = "submit" value = "Donate Now">
 				<p>
-					<small><i>
-One day in September 2015, I felt a lump in my left breast. I am not an alarmist, but I am also very educated and aware of what that could mean. I had an appointment scheduled in a month with my OB/GYN, so at first, I thought I would wait and talk to my doctor about it then. I had a mammogram just six months prior, so I figured that it was nothing. But I did some online research and decided that to be safe, I should schedule something sooner.
-
-I have known my doctor for years, since she delivered my children. During my exam, she agreed that something wasn’t right and walked me directly over to the radiology department. I stayed for the results. The images were concerning, so it was recommended that I see a surgeon for a biopsy.
-
-Since I didn’t know any surgeons, I was referred to one. I saw the surgeon the very next day and got a needle guided biopsy. I was very glad that I was able to get everything done so quickly. 
-Then I had to wait a couple days for results. I continued to work, and my job was very understanding. A couple days later, while I was at work, I the doctor’s office called. The surgeon told me that “it was malignant.” He didn’t use the word cancer, so I asked him if it was cancer, and he said it was.
-	I felt my world spinning. I barely remember the rest of the phone call. My mind was going a mile a minute. I was shocked that it was cancer. We have no family history of cancer. The diagnosis hit me hard.
-
-I went in the very next week to meet with the surgeon. He did an MRI on both of my breasts. At the appointment, he talked to me a little about next steps and a course of action. Then a few days later, the results came back that showed another lump in the left breast and one in the right. Days turned into weeks, as I had more MRIs and biopsies. This time was a blur as I went from one appointment to another and waited for results.
-
-My husband and I met with an oncologist that the surgeon referred us to within his same practice. The oncologist was a general oncologist and saw patients with a wide range of cancer. The surgeon who completed my testing was a general surgeon and not a surgical oncologist. After meeting with both of them, I just felt like I wanted doctors who specialized in cancer and specifically breast cancer.I came to CTCA with my husband. We stayed at a hotel close by, and we used a shuttle service provided by the hospital. During that time, I met with my entire care team, including my medical oncologist and surgical oncologist. I had tests, blood work and scans, and by the end of the evaluation, I knew the results.
-
-I found out I had stage IIB breast cancer, and my medical oncologist told me I could take some time to decide if I wanted to pursue treatment at CTCA. “Let’s get started right away,” I told her. So I went home, made arrangements and came back the next week.
-
-I had six rounds of chemotherapy. I went back and forth between home and the hospital. But now my family can't afford the expenses of my cancer treatment.All the money they had is finished.I don't know what should I do now.I need help from all of u for my treatment.Maybe this is my last chance for life.Please help 				
+					<small><i><?php echo $funddetails; ?></i></small>
+	</p>
 		
 	<div>	Here are the milestones:</div>
 	<h4>	-Shuvitro Roy - $2700</h4>
