change pass and edit profile

--- a/app/Views/changepassword.html
+++ b/app/Views/changepassword.html
@@ -7,8 +7,12 @@
 			<td height="30">
 				<h2 align="center">PROFILE</h2>
 				<p align="right"> Logged in as 
-					<a href="userinfo.html">USERNAME</a> 
-					<a href="index.html">LOGOUT</a>
+					<a href="userinfo.html">
+					<?php
+							echo $_SESSION["username"];
+					?>
+					</a> &nbsp | &nbsp
+					<a href="../Controllers/logout_controller.php">LOGOUT</a>
 				</p>
 
 			</td>
@@ -17,13 +21,13 @@
 		<tr>
 			<td height="20">
 				
-				<a href="userinfo.html">Personal Information</a>&nbsp &nbsp &nbsp  
+				<a href="../Views/userinfo.html">Personal Information</a>&nbsp &nbsp &nbsp  
 				<a href="explore.html">Campaigns</a> &nbsp &nbsp &nbsp
 				<a href="blogPersonal.html">Blogs</a> &nbsp &nbsp &nbsp
 				<a href="reports.html">Reports</a> &nbsp &nbsp &nbsp
 				<a href="userhistory.html">User History</a> &nbsp &nbsp &nbsp
-				<a href="editprofile.html">Edit Profile</a> &nbsp &nbsp &nbsp
-				<a href="changepassword.html">Change Password</a> &nbsp &nbsp &nbsp
+				<a href="../Controllers/editprofilecontroller.php">Edit Profile</a> &nbsp &nbsp &nbsp
+				<a href="../Controllers/changepasscontroller.php">Change Password</a> &nbsp &nbsp &nbsp
 				
 			</td>			
 		</tr >	
@@ -31,20 +35,21 @@
 		<tr>
 				
 			<td valign="top">
+				<form action="updatepasscontroller.php" method="post">
 				<fieldset>
 					<legend>CHANGE PASSWORD</legend>
 						
-							Current Password   : <input /><br/>
+							Current Password   : <input name="currentpassword" /><br/>
 							<hr/>
-							<font color="green">New Password </font> :<input /><br/>
+							<font color="green">New Password </font> :<input name="newpassword" /><br/>
 							<hr/>
-							<font color="red">Retype New Password </font>  :<input /><br/>
+							<font color="red">Retype New Password </font>  :<input name="retypepassword"/><br/>
 							
 							<hr/>
 							
 							<input type="Submit"/>
 				</fieldset>
-		
+				</form>
 			</td>
 												
 		</tr>
