--- a/app/Views/userprofile.html
+++ b/app/Views/userprofile.html
@@ -21,14 +21,13 @@
 		</tr>
 		<tr>
 			<td height="20">
-				
-				<a href="userinfo.html">Personal Information</a>&nbsp &nbsp &nbsp  
+				<a href="../Views/userinfo.html">Personal Information</a>&nbsp &nbsp &nbsp   
 				<a href="explore.html">Campaigns</a> &nbsp &nbsp &nbsp
 				<a href="blogPersonal.html">Blogs</a> &nbsp &nbsp &nbsp
 				<a href="reports.html">Reports</a> &nbsp &nbsp &nbsp
 				<a href="userhistory.html">User History</a> &nbsp &nbsp &nbsp
-				<a href="editprofile.html">Edit Profile</a> &nbsp &nbsp &nbsp
-				<a href="changepassword.html">Change Password</a> &nbsp &nbsp &nbsp
+				<a href="../Controllers/editprofilecontroller.php">Edit Profile</a> &nbsp &nbsp &nbsp
+				<a href="../Controllers/changepasscontroller.php">Change Password</a> &nbsp &nbsp &nbsp
 				
 			</td>			
 		</tr >	
