--- a/app/Views/index.html
+++ b/app/Views/index.html
@@ -10,7 +10,7 @@
 				
 				<a href="index.html">Home</a>&nbsp &nbsp &nbsp  
 				<a href="create.html">Create</a> &nbsp &nbsp &nbsp
-				<a href="explore.html">Explore</a> &nbsp &nbsp &nbsp
+				<a href="../Controllers/explore_controller.php">Explore</a> &nbsp &nbsp &nbsp
 				<a href="blog.html">Blog</a> &nbsp &nbsp &nbsp
 				<a href="login.html">Login</a>
 				
