--- a/app/Views/userprofile.html
+++ b/app/Views/userprofile.html
@@ -22,10 +22,10 @@
 		<tr>
 			<td height="20">
 				<a href="../Views/userinfo.html">Personal Information</a>&nbsp &nbsp &nbsp   
-				<a href="explore.html">Campaigns</a> &nbsp &nbsp &nbsp
-				<a href="blogPersonal.html">Blogs</a> &nbsp &nbsp &nbsp
-				<a href="reports.html">Reports</a> &nbsp &nbsp &nbsp
-				<a href="userhistory.html">User History</a> &nbsp &nbsp &nbsp
+				<a href="../Views/explore.html">Campaigns</a> &nbsp &nbsp &nbsp
+				<a href="../Views/blogPersonal.html">Blogs</a> &nbsp &nbsp &nbsp
+				<a href="../Views/reports.html">Reports</a> &nbsp &nbsp &nbsp
+				<a href="../Views/userhistory.html">User History</a> &nbsp &nbsp &nbsp
 				<a href="../Controllers/editprofilecontroller.php">Edit Profile</a> &nbsp &nbsp &nbsp
 				<a href="../Controllers/changepasscontroller.php">Change Password</a> &nbsp &nbsp &nbsp
 				
