--- a/app/Views/registration.html
+++ b/app/Views/registration.html
@@ -17,26 +17,26 @@
 					<legend><b>Registration Information</b></legend>
 						
 							<b>Name</b>   &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   :<input name="name" />
-							<span id="nameSpan" > sdfdf</span>
+							<span id="nameSpan" ></span>
 							<br/>
 							<hr/>
 							<hr/>
 							<b>Email</b>  &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp :<input name="email"/>
-							<span id="emailSpan" > sdfsd</span>
+							<span id="emailSpan" ></span>
 							<br/>
 							<hr/>
 							<hr/>
 							<b>User Name</b> &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp  :<input name="username"/>
-							<span id="usernameSpan" > sdfsd</span>
+							<span id="usernameSpan" ></span>
 							<br/>
 							
 							<hr/>
 							<hr/>
 							<b>Password</b> &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp  &nbsp  :<input type="password" name="password"/>
-							<span id="passwordSpan" > sdfsdf</span>
+							<span id="passwordSpan" ></span>
 							<br/><hr/>
 							<b>Confirm Password</b> &nbsp &nbsp  &nbsp :<input type="password" name="confirmPassword" />
-							<span id="confirmPasswordSpan" > sdfsd</span>
+							<span id="confirmPasswordSpan" ></span>
 							<br/><hr/>	
 											
 						<input type="submit" value="Submit" />
