modified reg page

--- a/app/Views/registration.html
+++ b/app/Views/registration.html
@@ -7,7 +7,14 @@
 			<td height="30" align="center">
 				<img src = "img/registration.jpg" align = "center" alt = "campaign.jpg" width = "980px" height = "100" align = "right" >											
 			</td>			
-		</tr >			
+		</tr >		
+			<tr>
+				<td>
+					<a href="../Views/explore.html">Explore</a> &nbsp &nbsp &nbsp
+					<a href="../Views/index.html">Home</a> &nbsp &nbsp &nbsp
+					<a href="../Views/login.html">Login</a> &nbsp &nbsp &nbsp
+				</td>
+			</tr>
 		<tr>				
 			<td valign="top">
 				
